add components and data

--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.8",
+    "papaparse": "^5.4.1",
+    "plotly.js": "^2.35.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-plotly.js": "^2.6.0",
+    "react-router-dom": "^7.0.1",
     "recharts": "^2.13.3"
   },
   "devDependencies": {
