--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-plotly.js": "^2.6.0",
-    "react-router-dom": "^7.0.1",
-    "recharts": "^2.13.3"
+    "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
